<resources>
    <string name="app_name">DoSomethingApp</string>

    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="price_point">Price Point</string>
    <string name="radius">Radius</string>

    <string name="home">Home</string>
    <string name="category_one">Food</string>
    <string name="category_two">NightLife</string>
    <string name="category_three">Single-Day Activities</string>
    <string name="category_four">Multi-Day Activities</string>

    <string name="settings">Settings</string>
    <string name="social_media">Social Media</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="ratings">Ratings:</string>
    <string name="favourite">Favourite</string>

</resources>
