<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home"/>
        <item
            android:id="@+id/category_one"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/category_one" />
        <item
            android:id="@+id/category_two"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/category_two" />
        <item
            android:id="@+id/category_three"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/category_three" />
        <item
            android:id="@+id/category_four"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/category_four" />
    </group>

    <item android:title="Preference">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/social_media" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
