<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/proceed_button">

        <TextView
            android:textSize="@dimen/text_small"
            android:id="@+id/category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_alignBottom="@+id/category_edit"
            android:layout_alignParentStart="true" />

        <TextView
            android:textSize="@dimen/text_small"
            android:id="@+id/category_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="ALL"
            android:layout_marginBottom="8dp"/>


        <TextView
            android:textSize="@dimen/text_small"
            android:id="@+id/price_point_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_point"
            android:layout_alignBottom="@+id/price_group"
            android:layout_alignParentStart="true"  />

        <RelativeLayout
            android:id="@+id/price_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/category_edit"
            android:layout_marginBottom="8dp">

            <TextView
                android:textSize="@dimen/text_small"
                android:id="@+id/dollar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text = "$ " />

            <TextView
                android:textSize="@dimen/text_small"
                android:layout_toEndOf="@+id/dollar_text"
                android:id="@+id/price_point_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "25.00" />
        </RelativeLayout>

        <TextView
            android:textSize="@dimen/text_small"
            android:id="@+id/radius_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:layout_alignBottom="@+id/radius_group"
            android:layout_alignParentStart="true"  />

        <RelativeLayout
            android:id="@id/radius_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_group"
            android:layout_alignParentEnd="true">

            <TextView
                android:textSize="@dimen/text_small"
                android:id="@+id/radius_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "5" />


            <TextView
                android:layout_toEndOf="@id/radius_edit"
                android:textSize="@dimen/text_small"
                android:id="@+id/km_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = " KM" />
        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/proceed_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="-8dp"
        android:layout_marginTop="8dp"
        android:text="Button" />

</RelativeLayout>